@@ -1,10 +1,10 @@
 package mcjty.rftoolsstorage;
 
 import mcjty.lib.base.ModBase;
-import mcjty.rftoolsstorage.setup.Config;
 import mcjty.rftoolsstorage.modules.craftingmanager.CraftingManagerSetup;
 import mcjty.rftoolsstorage.modules.modularstorage.ModularStorageSetup;
 import mcjty.rftoolsstorage.modules.scanner.StorageScannerSetup;
+import mcjty.rftoolsstorage.setup.Config;
 import mcjty.rftoolsstorage.setup.ModSetup;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.Item;
@@ -14,7 +14,6 @@ import net.minecraftforge.fml.config.ModConfig;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
-import net.minecraftforge.fml.loading.FMLPaths;
 
 @Mod(RFToolsStorage.MODID)
 public class RFToolsStorage implements ModBase {
@@ -38,18 +37,12 @@ public class RFToolsStorage implements ModBase {
 
         FMLJavaModLoadingContext.get().getModEventBus().addListener((FMLCommonSetupEvent event) -> setup.init(event));
         FMLJavaModLoadingContext.get().getModEventBus().addListener((FMLClientSetupEvent event) -> setup.initClient(event));
-
-        Config.loadConfig(Config.CLIENT_CONFIG, FMLPaths.CONFIGDIR.get().resolve("rftoolsstorage-client.toml"));
-        Config.loadConfig(Config.COMMON_CONFIG, FMLPaths.CONFIGDIR.get().resolve("rftoolsstorage-common.toml"));
     }
 
     @Override
     public String getModId() {
         return MODID;
     }
-
-    public static final String SHIFT_MESSAGE = "<Press Shift>";
-
 
     @Override
     public void openManual(PlayerEntity player, int bookIndex, String page) {
